Brand New portfolio

--- a/english.html
+++ b/english.html
@@ -81,8 +81,8 @@
             <div class="column large-9 mob-full intro-text">
                 <h3>hello,I'm Joachim Wéry</h3>
                 <h1>
-                    Full-stack dev<br>
-                    Webdesigner <br>
+                    Developer<br>
+                    Designer UI/UX<br>
                     Graphist
                 </h1>
             </div>
@@ -117,19 +117,19 @@
                 <div class="column large-full about-me__text">
                     <p class="lead">
                        I'm Joachim Wery
-                       and I'm a recently trained Full-Stack developer and an experienced Webdesigner for almost 2 years. I'm looking for a job in programming or web design.
+                       and I'm a recently trained Full-Stack developer and an experienced Webdesigner for almost 2 years.
                     </p>
 
                     <p>
-                        I'm fascinated by media and digital. I completed a 3-year diploma in multimedia writing, followed by a 2-year master's degree in transmedia architecture. To stay on the cutting edge, I took a 6-month course in Web Design. I've now decided to pursue my training as a .NET developer specializing in cybersecurity.
+                        I am fascinated by media and digital technology. I hold a 3-year degree in multimedia writing and a 2-year master's degree in transmedia architecture. To stay on top of the latest trends, I completed a 6-month training course in web design. I then followed up with a training course in .NET development to familiarize myself with the back-end.
                     </p>
 
                     <p>
-                        I'm a solution-oriented all-rounder with a wide range of skills. I can work in a wide range of fields, from web development and site integration to security and software development.
+                        I am a versatile, solution-oriented individual with a wide range of skills. I am capable of working in a variety of areas, including web development, site integration, security, and software development.
                     </p>
 
                     <p>
-                        I'm passionate about discovering new ideas and technical solutions to creative and technical challenges. If you're looking for a junior with an innovative and creative vision, I'm your man. My skills and experience will enable me to make a significant contribution to your company. I'm currently looking for new professional challenges in these fields. Please contact me if you are interested in working with me. I'm ready to take on new and exciting challenges!
+                        Je suis passionné par la découverte de nouvelles idées et de solutions techniques pour relever des défis créatifs et techniques. Si vous cherchez un junior avec une vision innovante et créative, je suis votre homme. Mes compétences et mon expérience me permettront de contribuer de manière significative à votre entreprise. Je suis actuellement à la recherche de nouveaux défis professionnels dans ces domaines. Contactez-moi pour toute opportunité de travail. Je suis prêt à affronter des défis nouveaux et passionnants !
                     </p>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                                 <h5>Developer Fullstack</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Production of websites via WordPress and Elementor CMS.Optimization of blog articles as well as images to make sites faster, optimal and optimized.Prototype site creation when putting online.</p>
+                                <p>Custom website production using WordPress and Elementor. Optimization of blog articles and images for faster, smoother, and more optimized websites. Creation of websites from prototype to launch.</p>
                             </div>
                         </div>
 
@@ -182,7 +182,7 @@
                                 <h5>Webdesigner (intership)</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p> Creation of prototype of animated interfaces and communication with a team of developer back-end and front-end for the integration of the final site.  </p>
+                                <p>Creation of captivating animated interface prototypes and close collaboration with a team of back-end and front-end developers to ensure a seamless integration of the final website.</p>
                             </div>
                         </div>
 
@@ -194,7 +194,8 @@
                                 <h5>Community Manger</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Creatioon and posts programming for the bar during events and special evenings.</p>
+                                <p>Generate and schedule captivating social media posts for the bar, stirring up excitement for events and special nights.
+                                </p>
                             </div>
                         </div>
 
@@ -228,7 +229,7 @@
                                 <h5>Training Full-stack .NET development + cybersecurity</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Application development in C#, Angular, Javascript and logical interface creation, with a specialization in cybersecurity. </p>
+                                <p>Cybersecurity-focused application development, proficient in C#, Angular, and JavaScript to design robust and secure applications.</p>
                              </div>
                             <div class="timeline__header">
                                 <p class="timeline__timeframe"> 2022 - 2023</p>
@@ -248,7 +249,7 @@
                                 <h5>Master in transmedia architecture</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Management of multimedia projects.Learning audiovisual skills in the studio and on the ground.</p>
+                                <p>Proficiency in transmedia storytelling tools and techniques, development of audiovisual production and project management skills, and preparation for a career in the creative and cultural industries.</p>
                             </div>
                         </div>
 
@@ -260,7 +261,7 @@
                                 <h5>Multimedia writing bachelor</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Training in digital communication, digital marketing, e-business, web referencing and IT.</p>
+                                <p>Maîtrise de l'écriture de scénarios captivants, la conception d'interfaces et la production audiovisuelle. Développement de compétences techniques, créatives et collaboratives. Préparation à une carriètr dans les domaines de la communication, du marketing et du divertissement.</p>
                             </div>
                         </div>
 
@@ -307,7 +308,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Full-Stack development</h4>
                     <p>
-                        I'm passionate about development because it's a constantly evolving field, and I'm constantly on the lookout for new frameworks and tools to keep up with the latest trends and technologies.
+                        I am passionate about software development because it is a constantly evolving field. This is why I am always on the lookout for new frameworks and tools to stay ahead of the curve and keep up with the latest trends and technologies.
                     </p>
                 </div>
             </div>
@@ -316,8 +317,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Interface design</h4>
                     <p>
-                        I have skills in web design, user experience and user interface. 
-                        This enables me to create websites that are both beautiful and effective, making sure that navigation is simple and intuitive for visitors.
+                        I craft captivating and ergonomic websites where beauty meets functionality. My expertise in web design, user experience, and user interface ensures a seamless and intuitive navigation for the visitors.
                     </p>
                 </div>
             </div>
@@ -326,8 +326,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Graphic designer</h4>
                     <p>
-                       I grew up using the Adobe suite from CS4.
-                        I have an excellent understanding of the basic principles of design and a solid experience with the tools of the Adobe suite, such as Photoshop, Illustrator and Indesign.
+                        A lifelong passion for design has driven me to master the Adobe Creative Suite, gaining proficiency since CS4. This extensive experience has equipped me with a deep understanding of fundamental design principles and expertise in utilizing Photoshop, Illustrator, and InDesign.
                     </p>
                 </div>
             </div>
@@ -336,8 +335,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">communication</h4>
                     <p>
-                       Having done 3 years in multimedia writing, I was able to acquire skills in digital communication.
-                        Whether in community management or in referencing of websites and digital marketing.
+                        With a strong 3-years background in Multimedia Writing, I have developed solid Digital Communication skills. Proficient in Community Management, SEO, and digital marketing strategies, I am able to create and deploy impactful digital campaigns to increase brand visibility and engagement.
                     </p>
                 </div>
             </div>
@@ -346,7 +344,7 @@
                 <div class="item-service__content">
                     <h4 class="item-title">Photography</h4>
                     <p>
-                        As a photographer for events and small businesses, I have gained great experience in communication with customers and individuals.I opened a portfolio focused on automotive photography and I also do passion phorography.
+                        A passionate automotive photographer with extensive experience in client communication, I have developed a strong expertise as an event and small business photographer. My work showcases the essence of vehicles and captures their unique beauty.
                     </p>
                 </div>
             </div>
