last modifications before putting online

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             <div class="column large-full">
                 <h2 class="section-heading section-heading--centerbottom">Mes travaux</h2>
                 <p class="section-desc">
-                    Voici quelques-uns des derniers travaux que j'ai réalisés. 
+                    Voici quelques-uns des derniers travaux que j'ai réalisé. 
                 </p>
             </div>
         </div> <!-- end heading-block -->
@@ -406,7 +406,7 @@
 
 
 
-        <section class="section">
+        <section class="section" data-aos="fade-up">
             <div class="cards">
               <a href="https://www.figma.com/proto/cAzUa4juyrJgWWzPFDuZ0T/Application-SafeParents?page-id=23%3A5&type=design&node-id=431-2528&viewport=3638%2C-1607%2C0.66&t=UoTEIA5U6hYTSOsu-1&scaling=scale-down&starting-point-node-id=431%3A2528" class="card card-1">
                 <figure class="visual">
@@ -415,10 +415,11 @@
                     src="/images/portfolio/Safeparents.jpg"
                     alt="Logo Safe Parent with a blurry picture in background"
                   />
+                
                   <figcaption class="figcaption"><img src="/images/portfolio/safelogo.svg" alt="logo sageparents"></figcaption>
                 </figure>
               </a>
-              <a href="#" class="card card-2">
+              <a href="https://arkam.be/" class="card card-2">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -433,7 +434,7 @@
                   <img
                     class="card-img"
                     src="/images/portfolio/Chevalliance.png"
-                    alt="Person in vibrant neon lighting with abstract shapes"
+                    alt="Horse in background"
                   />
                   <figcaption class="figcaption"><img src="/images/portfolio/logocheval.svg" alt="Logo Chevalliance"></figcaption>
                 </figure>
@@ -443,7 +444,7 @@
                   <img
                     class="card-img"
                     src="/images/portfolio/mariage.jpg"
-                    alt="Person wearing a virtual reality headset in a blue-lit room"
+                    alt="Tiffany Photography website"
                   />
                   <figcaption class="figcaption"><img src="/images/portfolio/logotiff.svg" alt="Logo tiffanyphotographie"</figcaption>
                 </figure>
@@ -453,6 +454,16 @@
 
           <section class="section">
             <div class="cards">
+                <a href="https://www.figma.com/proto/tZ9EUdv9qtrTrFiYEopOg8/Borne-arcade?page-id=370%3A2824&node-id=370-7586&viewport=2591%2C1949%2C0.11&scaling=scale-down&starting-point-node-id=370%3A7586" class="card card-6">
+                    <figure class="visual">
+                      <img
+                        class="card-img"
+                        src="/images/portfolio/donkey.gif"
+                        alt="Retros Application"
+                      />
+                      <figcaption class="figcaption"><img src="/images/portfolio/logoretros.svg" alt="logo arkam"></figcaption>
+                    </figure>
+                  </a>
               <a href="https://www.figma.com/proto/SWo2Tk2NJf7A1dN7RCSWpj/Maquette-Horus?page-id=0%3A1&node-id=1-4&viewport=-362%2C385%2C0.36&t=d8EjpX4IObYMu87T-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A4" class="card card-5">
                 <figure class="visual">
                   <img
@@ -463,34 +474,10 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/logofalco.svg" alt="logo Falco"></figcaption>
                 </figure>
               </a>
-              <a href="#" class="card card-6">
+              <a  class="card card-7">
                 <figure class="visual">
-                  <img
-                    class="card-img"
-                    src="/images/portfolio/arkam.webp"
-                    alt="Batman Speaking"
-                  />
-                  <figcaption class="figcaption"><img src="/images/portfolio/aOrange.svg" alt="logo arkam"></figcaption>
-                </figure>
-              </a>
-              <a href="https://chevalliance.eu/" class="card card-7">
-                <figure class="visual">
-                  <img
-                    class="card-img"
-                    src="/images/portfolio/Chevalliance.png"
-                    alt="Person in vibrant neon lighting with abstract shapes"
-                  />
-                  <figcaption class="figcaption"><img src="/images/portfolio/logocheval.svg" alt="Logo Chevalliance"></figcaption>
-                </figure>
-              </a>
-              <a href="https://tiffanyphotographie.be/" class="card card-8">
-                <figure class="visual">
-                  <img
-                    class="card-img"
-                    src="/images/portfolio/mariage.jpg"
-                    alt="Person wearing a virtual reality headset in a blue-lit room"
-                  />
-                  <figcaption class="figcaption"><img src="/images/portfolio/logotiff.svg" alt="Logo tiffanyphotographie"</figcaption>
+                  
+                  <figcaption class="figcaption">Autres projets à venir</figcaption>
                 </figure>
               </a>
             </div>
