--- a/english.html
+++ b/english.html
@@ -297,7 +297,7 @@
                 <h2 class="section-heading section-heading--centerbottom">Skills</h2>
 
                 <p class="section-desc">
-                    I love exploring new ways of designing elegant and efficient interfaces
+                    My goal: The perfect harmony between elegance and efficiency.
                 </p>
             </div>
         </div> <!-- end heading-block -->
