--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="row about-me__content" data-aos="fade-up">
                 <div class="column large-full about-me__text">
                     <p class="lead">
-                        Mon nom est JOACHIM WERY et je suis un développeur et un Webdesigner expérimenté depuis près de 2 ans.
+                        Mon nom est JOACHIM WERY, je suis un développeur et un Webdesigner expérimenté depuis près de 2 ans.
                     </p>
 
                     <p>
@@ -299,7 +299,8 @@
                 <h2 class="section-heading section-heading--centerbottom">Compétences</h2>
 
                 <p class="section-desc">
-                    My goal: The perfect harmony between elegance and efficiency.                </p>
+                    Mon objectif: une harmonie entre élégance et efficacité
+                </p>
             </div>
         </div> <!-- end heading-block -->
 
