--- a/english.html
+++ b/english.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="css/grid.css">
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
@@ -63,7 +63,7 @@
                 <li><a href="https://twitter.com/joachim_wery"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.linkedin.com/in/joachim-wery/"><i class="fab fa-linkedin-in" style="color: #ffffff;" aria-hidden="true"></i></a></li>
                 <li><a href="https://www.instagram.com/joachimwery/"><i class="fab fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/JoatypeR"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/Jwery"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
 
