--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.facebook.com/joachim.wery.7"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/joachim_wery"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/joachim-wery/"><i class="fab fa-linkedin-in" style="color: #ffffff;" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com/joachimwery/"><i class="fab fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/JoatypeR"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://twitter.com/joachim_wery"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/joachim-wery/"><i class="fab fa-linkedin-in" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/joachimwery/"><i class="fab fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://github.com/Jwery"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
 
@@ -409,7 +408,7 @@
 
         <section class="section" data-aos="fade-up">
             <div class="cards">
-              <a href="https://www.figma.com/proto/cAzUa4juyrJgWWzPFDuZ0T/Application-SafeParents?page-id=23%3A5&type=design&node-id=431-2528&viewport=3638%2C-1607%2C0.66&t=UoTEIA5U6hYTSOsu-1&scaling=scale-down&starting-point-node-id=431%3A2528" class="card card-1">
+              <a target="_blank" href="https://www.figma.com/proto/cAzUa4juyrJgWWzPFDuZ0T/Application-SafeParents?page-id=23%3A5&type=design&node-id=431-2528&viewport=3638%2C-1607%2C0.66&t=UoTEIA5U6hYTSOsu-1&scaling=scale-down&starting-point-node-id=431%3A2528" class="card card-1">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -420,7 +419,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/safelogo.svg" alt="logo sageparents"></figcaption>
                 </figure>
               </a>
-              <a href="https://arkam.be/" class="card card-2">
+              <a target="_blank" href="https://arkam.be/" class="card card-2">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -430,7 +429,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/aOrange.svg" alt="logo arkam"></figcaption>
                 </figure>
               </a>
-              <a href="https://chevalliance.eu/" class="card card-3">
+              <a target="_blank" href="https://chevalliance.eu/" class="card card-3">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -440,7 +439,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/logocheval.svg" alt="Logo Chevalliance"></figcaption>
                 </figure>
               </a>
-              <a href="https://tiffanyphotographie.be/" class="card card-4">
+              <a target="_blank" href="https://tiffanyphotographie.be/" class="card card-4">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -476,9 +475,8 @@
                 </figure>
               </a>
               <a  class="card card-7">
-                <figure class="visual">
-                  
-                  <figcaption class="figcaption">Autres projets à venir</figcaption>
+                <figure class="visual-2">
+                  <figcaption class="figcaption2">Autres projets à venir</figcaption>
                 </figure>
               </a>
             </div>
