Correction target blank

--- a/english.html
+++ b/english.html
@@ -59,11 +59,10 @@
             </ul>
 
             <ul class="header-social">
-                <li><a href="https://www.facebook.com/joachim.wery.7"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
-                <li><a href="https://twitter.com/joachim_wery"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/joachim-wery/"><i class="fab fa-linkedin-in" style="color: #ffffff;" aria-hidden="true"></i></a></li>
-                <li><a href="https://www.instagram.com/joachimwery/"><i class="fab fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a></li>
-                <li><a href="https://github.com/Jwery"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://twitter.com/joachim_wery"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.linkedin.com/in/joachim-wery/"><i class="fab fa-linkedin-in" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://www.instagram.com/joachimwery/"><i class="fab fa-instagram" style="color: #ffffff;" aria-hidden="true"></i></a></li>
+                <li><a target="_blank" href="https://github.com/Jwery"><i class="fab fa-github" style="color: #ffffff;" aria-hidden="true"></i></a></li>
             </ul>
         </nav>
 
@@ -391,20 +390,9 @@
 
     <!-- works
     ================================================== -->
-    <section id="works" class="s-works target-section">
-
-        <div class="row heading-block heading-block--center" data-aos="fade-up">
-            <div class="column large-full">
-                <h2 class="section-heading section-heading--centerbottom">My work</h2>
-                <p class="section-desc">
-                    Here are some of the latest work I carried out.
-                </p>
-            </div>
-        </div> <!-- end heading-block -->
-
-        <section class="section" data-aos="fade-up">
+    <section class="section" data-aos="fade-up">
             <div class="cards">
-              <a href="https://www.figma.com/proto/cAzUa4juyrJgWWzPFDuZ0T/Application-SafeParents?page-id=23%3A5&type=design&node-id=431-2528&viewport=3638%2C-1607%2C0.66&t=UoTEIA5U6hYTSOsu-1&scaling=scale-down&starting-point-node-id=431%3A2528" class="card card-1">
+              <a target="_blank" href="https://www.figma.com/proto/cAzUa4juyrJgWWzPFDuZ0T/Application-SafeParents?page-id=23%3A5&type=design&node-id=431-2528&viewport=3638%2C-1607%2C0.66&t=UoTEIA5U6hYTSOsu-1&scaling=scale-down&starting-point-node-id=431%3A2528" class="card card-1">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -415,7 +403,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/safelogo.svg" alt="logo sageparents"></figcaption>
                 </figure>
               </a>
-              <a href="https://arkam.be/" class="card card-2">
+              <a target="_blank" href="https://arkam.be/" class="card card-2">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -425,7 +413,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/aOrange.svg" alt="logo arkam"></figcaption>
                 </figure>
               </a>
-              <a href="https://chevalliance.eu/" class="card card-3">
+              <a target="_blank" href="https://chevalliance.eu/" class="card card-3">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -435,7 +423,7 @@
                   <figcaption class="figcaption"><img src="/images/portfolio/logocheval.svg" alt="Logo Chevalliance"></figcaption>
                 </figure>
               </a>
-              <a href="https://tiffanyphotographie.be/" class="card card-4">
+              <a target="_blank" href="https://tiffanyphotographie.be/" class="card card-4">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -450,7 +438,7 @@
 
           <section class="section">
             <div class="cards">
-                <a href="https://www.figma.com/proto/tZ9EUdv9qtrTrFiYEopOg8/Borne-arcade?page-id=370%3A2824&node-id=370-7586&viewport=2591%2C1949%2C0.11&scaling=scale-down&starting-point-node-id=370%3A7586" class="card card-6">
+                <a target="_blank" href="https://www.figma.com/proto/tZ9EUdv9qtrTrFiYEopOg8/Borne-arcade?page-id=370%3A2824&node-id=370-7586&viewport=2591%2C1949%2C0.11&scaling=scale-down&starting-point-node-id=370%3A7586" class="card card-6">
                     <figure class="visual">
                       <img
                         class="card-img"
@@ -460,7 +448,7 @@
                       <figcaption class="figcaption"><img src="/images/portfolio/logoretros.svg" alt="logo arkam"></figcaption>
                     </figure>
                   </a>
-              <a href="https://www.figma.com/proto/SWo2Tk2NJf7A1dN7RCSWpj/Maquette-Horus?page-id=0%3A1&node-id=1-4&viewport=-362%2C385%2C0.36&t=d8EjpX4IObYMu87T-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A4" class="card card-5">
+              <a target="_blank" href="https://www.figma.com/proto/SWo2Tk2NJf7A1dN7RCSWpj/Maquette-Horus?page-id=0%3A1&node-id=1-4&viewport=-362%2C385%2C0.36&t=d8EjpX4IObYMu87T-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A4" class="card card-5">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -471,9 +459,8 @@
                 </figure>
               </a>
               <a  class="card card-7">
-                <figure class="visual">
-                  
-                  <figcaption class="figcaption">Other projects soon</figcaption>
+                <figure class="visual-2">
+                  <figcaption class="figcaption2">Other projects comming</figcaption>
                 </figure>
               </a>
             </div>
@@ -567,11 +554,11 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Useful links</h4>
                 <ul>
-                    <li><a href="https://twitter.com/joachim_wery" title="Twitter">Twitter</a></li>
-                    <li><a href="https://www.linkedin.com/in/joachim-wery/" title="LinkedIn">LinkedIn</a></li>
-                    <li><a href="https://www.facebook.com/joachim.wery.7" title="Facebook">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/joachimwery/" title="Instagram">Instagram</a></li>
-                    <li><a href="https://github.com/JoatypeR" title="Github">Github</a></li>
+                    <li><a target="_blank" href="https://twitter.com/joachim_wery" title="Twitter">Twitter</a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/joachim-wery/" title="LinkedIn">LinkedIn</a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/joachim.wery.7" title="Facebook">Facebook</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/joachimwery/" title="Instagram">Instagram</a></li>
+                    <li><a target="_blank" href="https://github.com/JoatypeR" title="Github">Github</a></li>
                 </ul>
             </div>
             <div class="column large-7 medium-full contact-social">
