--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
           <section class="section">
             <div class="cards">
-                <a href="https://www.figma.com/proto/tZ9EUdv9qtrTrFiYEopOg8/Borne-arcade?page-id=370%3A2824&node-id=370-7586&viewport=2591%2C1949%2C0.11&scaling=scale-down&starting-point-node-id=370%3A7586" class="card card-6">
+                <a target="_blank" href="https://www.figma.com/proto/tZ9EUdv9qtrTrFiYEopOg8/Borne-arcade?page-id=370%3A2824&node-id=370-7586&viewport=2591%2C1949%2C0.11&scaling=scale-down&starting-point-node-id=370%3A7586" class="card card-6">
                     <figure class="visual">
                       <img
                         class="card-img"
@@ -464,7 +464,7 @@
                       <figcaption class="figcaption"><img src="/images/portfolio/logoretros.svg" alt="logo arkam"></figcaption>
                     </figure>
                   </a>
-              <a href="https://www.figma.com/proto/SWo2Tk2NJf7A1dN7RCSWpj/Maquette-Horus?page-id=0%3A1&node-id=1-4&viewport=-362%2C385%2C0.36&t=d8EjpX4IObYMu87T-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A4" class="card card-5">
+              <a target="_blank" href="https://www.figma.com/proto/SWo2Tk2NJf7A1dN7RCSWpj/Maquette-Horus?page-id=0%3A1&node-id=1-4&viewport=-362%2C385%2C0.36&t=d8EjpX4IObYMu87T-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A4" class="card card-5">
                 <figure class="visual">
                   <img
                     class="card-img"
@@ -569,11 +569,11 @@
             <div class="column large-7 medium-full contact-social">
                 <h4>Liens utiles</h4>
                 <ul>
-                    <li><a href="https://twitter.com/joachim_wery" title="Twitter">Twitter</a></li>
-                    <li><a href="https://www.linkedin.com/in/joachim-wery/" title="LinkedIn">LinkedIn</a></li>
-                    <li><a href="https://www.facebook.com/joachim.wery.7" title="Facebook">Facebook</a></li>
-                    <li><a href="https://www.instagram.com/joachimwery/" title="Instagram">Instagram</a></li>
-                    <li><a href="https://github.com/JoatypeR" title="Github">Github</a></li>
+                    <li><a target="_blank" href="https://twitter.com/joachim_wery" title="Twitter">Twitter</a></li>
+                    <li><a target="_blank" href="https://www.linkedin.com/in/joachim-wery/" title="LinkedIn">LinkedIn</a></li>
+                    <li><a target="_blank" href="https://www.facebook.com/joachim.wery.7" title="Facebook">Facebook</a></li>
+                    <li><a target="_blank" href="https://www.instagram.com/joachimwery/" title="Instagram">Instagram</a></li>
+                    <li><a target="_blank" href="https://github.com/JoatypeR" title="Github">Github</a></li>
                 </ul>
             </div>
             <div class="column large-7 medium-full contact-social">
