--- a/english.html
+++ b/english.html
@@ -127,7 +127,7 @@
                     </p>
 
                     <p>
-                        Je suis passionné par la découverte de nouvelles idées et de solutions techniques pour relever des défis créatifs et techniques. Si vous cherchez un junior avec une vision innovante et créative, je suis votre homme. Mes compétences et mon expérience me permettront de contribuer de manière significative à votre entreprise. Je suis actuellement à la recherche de nouveaux défis professionnels dans ces domaines. Contactez-moi pour toute opportunité de travail. Je suis prêt à affronter des défis nouveaux et passionnants !
+                        I'm passionate about discovering new ideas and technical solutions to creative and technical challenges. If you're looking for a junior with an innovative and creative vision, I'm your man. My skills and experience will enable me to make a significant contribution to your company. I'm currently looking for new professional challenges in these fields. Please contact me if you are interested in working with me. I'm ready to take on new and innovative challenges.
                     </p>
                 </div>
             </div>
@@ -259,7 +259,7 @@
                                 <h5>Multimedia writing bachelor</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Maîtrise de l'écriture de scénarios captivants, la conception d'interfaces et la production audiovisuelle. Développement de compétences techniques, créatives et collaboratives. Préparation à une carriètr dans les domaines de la communication, du marketing et du divertissement.</p>
+                                <p>Master captivating scriptwriting, interface design and audiovisual production. Development of technical, creative and collaborative skills. Preparation for a career in communications, marketing and entertainment.                                </p>
                             </div>
                         </div>
 
