--- a/english.html
+++ b/english.html
@@ -163,6 +163,18 @@
                         <div class="timeline__block">
                             <div class="timeline__bullet"></div>
                             <div class="timeline__header">
+                                <p class="timeline__timeframe">September 2024 - January 2025</p>
+                                <h3 class="item-title">Group-IPS</h3>
+                                <h5>Functional Analyst</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>Key role in the implementation and optimisation of a new Enterprise Resource Planning (ERP) system. Gathering and documenting requirements, configuring system modules and overseeing data migration to ensure a smooth transition.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
                                 <p class="timeline__timeframe">April 2023 - September 2023</p>
                                 <h3 class="item-title">UPARTNER</h3>
                                 <h5>Developer Fullstack</h5>
@@ -575,7 +587,7 @@
     <footer>
         <div class="row">
             <div class="column large-full ss-copyright">
-                <span>© Joachim Wéry 2023-2024</span>        
+                <span>© Joachim Wéry 2024-2025</span>        
 
             <div class="ss-go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top"></a>
