--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
                     <p>
                     
-                        Je suis passionné par la découverte de nouvelles idées et de solutions techniques pour relever des défis créatifs et techniques. Si vous cherchez un junior avec une vision innovante et créative, je suis votre homme. Mes compétences et mon expérience me permettront de contribuer de manière significative à votre entreprise. Je suis actuellement à la recherche de nouveaux défis professionnels dans ces domaines. Contactez-moi pour toute opportunité de travail. Je suis prêt à affronter des défis nouveaux et innovants.
+                        Je suis passionné par la découverte de nouvelles idées et de solutions techniques pour relever des défis créatifs et techniques. Si vous cherchez un junior avec une vision innovante et créative, je suis la personne qui vous faut. Mes compétences et mon expérience me permettront de contribuer de manière significative à votre entreprise. Je suis actuellement à la recherche de nouveaux défis professionnels dans ces domaines. Contactez-moi pour toute opportunité de travail. Je suis prêt à affronter des défis nouveaux et innovants.
                     </p>
                 </div>
             </div>
@@ -160,6 +160,18 @@
 
                         <div class="timeline__icon-wrap">
                             <span class="timeline__icon timeline__icon--work"></span>
+                        </div>
+
+                        <div class="timeline__block">
+                            <div class="timeline__bullet"></div>
+                            <div class="timeline__header">
+                                <p class="timeline__timeframe">Septembre 2024 - Janvier 2025</p>
+                                <h3 class="item-title">Group-IPS</h3>
+                                <h5>Analyste Fonctionnel</h5>
+                            </div>
+                            <div class="timeline__desc">
+                                <p>Rôle essentiel dans la mise en œuvre et de l'optimisation d'un nouveau système de planification des ressources de l'entreprise (ERP). Recueil et documentation des besoins, configuration des modules du système et supervision de la migration des données afin d'assurer une transition en douceur.</p>
+                            </div>
                         </div>
 
                         <div class="timeline__block">
@@ -592,7 +604,7 @@
     <footer>
         <div class="row">
             <div class="column large-full ss-copyright">
-                <span>© Joachim Wéry 2023-2024</span>        
+                <span>© Joachim Wéry 2024-2025</span>        
 
             <div class="ss-go-top">
                 <a class="smoothscroll" title="Back to Top" href="#top"></a>
