--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 <h5>Analyste Fonctionnel</h5>
                             </div>
                             <div class="timeline__desc">
-                                <p>Rôle essentiel dans la mise en œuvre et de l'optimisation d'un nouveau système de planification des ressources de l'entreprise (ERP). Recueil et documentation des besoins, configuration des modules du système et supervision de la migration des données afin d'assurer une transition en douceur.</p>
+                                <p>Rôle essentiel dans la mise en œuvre et l'optimisation d'un nouveau système de planification des ressources de l'entreprise (ERP). Recueil et documentation des besoins, configuration des modules du système et supervision de la migration des données afin d'assurer une transition en douceur de l'ancien ERP à Microsoft Dynamics 365.</p>
                             </div>
                         </div>
 
