--- a/english.html
+++ b/english.html
@@ -567,7 +567,7 @@
                 <ul>
                     <li><a target="_blank" href="https://twitter.com/joachim_wery" title="Twitter">Twitter</a></li>
                     <li><a target="_blank" href="https://www.linkedin.com/in/joachim-wery/" title="LinkedIn">LinkedIn</a></li>
-                    <li><a target="_blank" href="https://github.com/JoatypeR" title="Github">Github</a></li>
+                    <li><a target="_blank" href="https://github.com/Jwery" title="Github">Github</a></li>
                 </ul>
             </div>
             <div class="column large-7 medium-full contact-social">
